# player-desktop

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: album.rs  album_metadata.rs  artist.rs  backend.rs  cover.rs  db.rs  lib.rs  library.rs  loudness.rs  main.rs  models.rs  mpv.rs  now_playing.rs  now_playing.swift
src/lib/: albumInfo.ts  artistImage.ts  artistInfo.ts  bpmAudit.ts  cover.ts  genres.ts  playlists.ts  sourceTags.ts  tauri.ts  vibes.ts
