[package]
name = "needle"
version = "0.1.0"
description = "Local-first music player"
authors = ["David Relich"]
edition = "2021"

[lib]
name = "music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
lofty = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
walkdir = "2.5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["sync", "time"] }
ctrlc = { version = "3.4", features = ["termination"] }
libc = "0.2"
